syntax = "proto3";
import "google/protobuf/timestamp.proto";
option go_package="github.com/bredr/go-grpc-example/proto/films";

package films;

service FilmService {
  rpc CreateFilm(Film) returns (Film) {}
  rpc UpdateFilm(Film) returns (Film) {}
  rpc FindFilms(FilmSearchRequest) returns (Films) {}
  rpc DeleteFilm(ID) returns (Empty) {}
}

enum FilmGenre {
  NULL_GENRE = 0;
  ACTION = 1;
  ADVENTURE = 2;
  ANIMATION = 3;
  BIOGRAPHY = 4;
  COMEDY = 5;
  CRIME = 6;
  DOCUMENTARY = 7;
  DRAMA = 8;
  FANTASY = 9;
  HORROR = 10;
  THRILLER = 11;
  SCI_FI = 12;
  ROMANCE =13;
}

message Film {
  string ID = 1;
  string Name = 2;
  google.protobuf.Timestamp ReleaseDate = 3;
  FilmGenre Genre = 4;
}

message FilmSearchRequest {
  repeated FilmGenre AllowedGenres = 1;
  string NameSearch = 2;
  google.protobuf.Timestamp ReleasedAfter = 3;
}

message Films {
  repeated Film Films = 1;
}

message Empty {

}

message ID {
  string ID = 1;
}
